Cleaned up folder structure and some bugs
The major bugs are all cleared up now so you guys should be able to create your own account and add food items accordingly. I might add a feature to show the user a preview of what the food is before commiting to the food journal but I've spent WAY too much time on this already instead of studying for the tests. Feel free to experiment with the files!

--- a/vignesh-flask/oop-group-3/foodhubsg/static/style.css
+++ b/vignesh-flask/oop-group-3/foodhubsg/static/style.css
@@ -1,5 +1,4 @@
 html {
-  font-family: 'Muli', sans-serif;
   background: #eee;
   padding: 1rem;
 }
@@ -11,13 +10,12 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Muli', sans-serif;
-  color: #377ba8;
+  color: #A1C66B;
   margin: 1rem 0;
 }
 
 a {
-  color: #377ba8;
+  color: #88a854;
 }
 
 hr {
@@ -29,7 +27,7 @@ nav {
   background: lightgray;
   display: flex;
   align-items: center;
-  padding: 0 0.5rem;
+  padding: 1rem 0.5rem;
 }
 
 nav h1 {
@@ -38,7 +36,6 @@ nav h1 {
 }
 
 nav h1 a {
-  text-decoration: none;
   padding: 0.25rem 0.5rem;
 }
 
@@ -72,8 +69,8 @@ nav ul li a, nav ul li span, header .action {
 .flash {
   margin: 1em 0;
   padding: 1em;
-  background: #cae6f6;
-  border: 1px solid #377ba8;
+  background: #ffc8c3;
+  box-shadow: 10px 10px 40px -24px rgba(0,0,0,0.75);
 }
 
 .post > header {
